# item_reader

./: .gitignore  README.md  crawl_path.py  create_folders.sh  main.py  ollama_swarm.sh  pyproject.toml
docs/: index.md
item_extractor/: __init__.py  logger.py  models.py  protocols.py
item_extractor/art_extractor/: __init__.py  art_detector.py  cropper.py
item_extractor/markdown_builder/: builder.py  template.j2.md
item_extractor/text_extractor/: __init__.py  llm_client.py  llm_parser.py  ocr_tesseract.py
