[project]
name = "item-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "lmstudio>=1.3.1",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "niquests>=3.14.0",
    "numpy>=2.2.5",
    "o2>=100200300400500.0.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "structlog>=25.3.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.2",
]
